<resources>
    <string name="app_name">Deutschland App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_geodata">Geo Data</string>
    <string name="title_activity_register_account">RegisterAccountActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Enter PIN</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_password">PIN must be 4 characters long</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_geo_data">GeoDataActivity</string>
    <string name="welcome_user">Welcome</string>
    <string name="welcome_username">Welcome %s!</string>
    <string name="title_activity_mail_box">MailBoxActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menu_mailbox">Mailbox</string>
    <string name="menu_law_registry">Law Registry</string>
    <string name="menu_signature">File Signer</string>
    <string name="menu_data_safe">Data Safe</string>
    <string name="menu_appointments">Appointments</string>
    <string name="menu_applications">Applications</string>
    <string name="menu_finder">Admin. Service Finder</string>
    <string name="log_out">Log out</string>
    <string name="switch_account">Switch Account</string>
    <string name="switch_language">Switch Language</string>
    <string name="administrative_service">Administrative Service</string>
    <string name="label_placeholder">Label</string>
    <string name="submit">Submit</string>
    <string name="register">Next</string>
    <string name="add_account">Add Account</string>
    <string name="successful">Successful!</string>
    <string name="set_pin_for_the_account">Set PIN for the account</string>
    <string name="set_pin_message">Set your PIN</string>
    <string name="confirm_password">Confirm PIN</string>
    <string name="set_pin">Set PIN</string>
    <string name="channel_name">EMERGENCY_CHANNEL</string>
    <string name="channel_description">Channel for sending emergency notifications</string>
    <string name="welcome_dashboard">Welcome %s!</string>
    <string name="address_dashboard">%s, %s</string>
    <string name="account_id_dashboard">ID: %s</string>
    <string name="dashboard_appointments_title">Appointments</string>
    <string name="dashboard_applications_title">Applications</string>
    <string name="dashboard_emergencies_title">Emergencies</string>
    <string name="add_file">New File</string>
    <string name="add_folder">Folder</string>
    <string name="data_safe">Data Safe</string>
    <string name="please_select_an_object">Please select an object</string>
    <string name="law_registry">Law Registry</string>
    <string name="sign_uploaded_locally">Sign and save locally</string>
    <string name="sign_uploaded_data_safe">Sign and save in the Data Safe</string>
    <string name="upload_from_data_safe">Upload from Data Safe</string>
    <string name="upload_from_storage">Upload from local storage</string>
    <string name="deutschland_app">Deutschland-App</string>
    <string name="citizen_type_register">Citizen</string>
    <string name="company_type_register">Company</string>
    <string name="invalid_account_id">Account ID must contain at least 5 characters</string>
    <string name="enter_citizen_type">Citizen ID</string>
    <string name="enter_company_type">Company ID</string>
    <string name="empty_accounts">¯\\_(ツ)_/¯</string>
    <string name="prompt_pin">4-digit PIN</string>
    <string name="register_failed_message">Failure:\n %s</string>
    <string name="try_again_register_failed_button">Try again</string>
    <string name="set_pin_for_account_register_successful">Set PIN for the account</string>
    <string name="register_successful_message">Successful</string>
    <string name="note_additional_info">Note: %s</string>
    <string name="status_placeholder">%s</string>
</resources>