<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_finder"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_finder" />

        <item
            android:id="@+id/nav_mailbox"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/menu_mailbox" />

        <item
            android:id="@+id/nav_applications"
            android:icon="?attr/actionModePasteDrawable"
            android:title="@string/menu_applications" />

        <item
            android:id="@+id/nav_appointments"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_appointments" />

        <item
            android:id="@+id/nav_data_safe"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/menu_data_safe" />

        <item
            android:id="@+id/nav_signature"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_signature" />

        <item
            android:id="@+id/nav_geodata"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_geodata" />

        <item
            android:id="@+id/nav_law_registry"
            android:icon="?android:attr/actionModeFindDrawable"
            android:title="@string/menu_law_registry" />
        <item
            android:id="@+id/nav_admin_service"
            android:icon="@drawable/mapbox_compass_icon"
            android:title="Admin Service" />
    </group>
</menu>
